{
    "name": "Controls",
    "maps": [
        {
            "name": "Controls",
            "id": "86a5dbea-3923-44ae-9e67-8025c200bba4",
            "actions": [
                {
                    "name": "Pan",
                    "type": "Button",
                    "id": "77d3a84d-c1e3-45c6-b7f1-8b0bb8843952",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseInput",
                    "type": "Value",
                    "id": "ca3a14de-d8b4-44a7-9955-e92eed881c2d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "afb3e4e0-02a1-4269-a07e-97ebff20c191",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "67110841-1234-40e8-9330-5c4b99afe95e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "bfe50579-4042-453f-a5f5-fff96495d206",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64436c7e-cf67-4b8f-9683-a3bc0875f305",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a272fb6c-7002-442e-b111-821bcd5815c1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf4bdf75-d8a6-46ae-b04f-17c858e5aa12",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f256bd2-2d85-418f-a50d-5c5b40f2d9cb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45a33a40-acf4-406c-b081-e740c4ec4810",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "522b592b-30d5-4462-909d-49ca94f386c0",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa920bd2-4d9b-48fd-8862-b0084bc42656",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "877ad364-2670-4068-97c9-12fe953284e3",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}